css/navbar.css
*{
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}
body {
  background-color: rgba(0, 0, 0, 0.2) !important;
}
.navbar {
  /* background-color: transparent !important; */
  border: none;
  background-color: rgba(0, 0, 0, 0.3) !important;
  backdrop-filter: blur(5.5px) !important;
  -webkit-backdrop-filter: blur(5.5px) !important;
}

.nav-bar-content {
  /* background: rgb(0 4 8 / 50%); */
  backdrop-filter: blur(5.5px) !important;
  -webkit-backdrop-filter: blur(5.5px);
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 999;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 200px;
}
.logo {
  /* 1em = 16px relative to body */
  font-size: 1.8em;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: bold;
  color: rgb(0, 136, 226);
}

.nav-item{
  margin: 0px 20px;
}

.nav-link {
  color: #fff !important;
  font-weight: 800 !important;
  text-decoration: none;
  font-size: 1.1em !important;
  font-weight: 300;
  width: auto;
  display: inline-block;
  text-transform: uppercase;
  position: relative;
}

.nav-link:hover {
  color: rgb(0, 136, 226) !important;
}

.nav-link::before {
  transition: 300ms ease;
  height: 2px;
  content: "";
  position: absolute;
  background-color: rgb(0, 136, 226) ;
  width: 0%;
  bottom: 1px;
}

.nav-link:hover::before {
  width: 100%;
}

.navbar-toggler-icon{
  color: #fff !important;
}

.navTrigger {
  bottom: 0;
  cursor: pointer;
  height: 25px;
  margin: auto;
  position: absolute;
  right: 30px;
  top: 0;
  width: 30px;
  display: block;
}

@media (max-width: 768px){
  .navTrigger {
    display: block;
}
}

